# CSCI441-Zelda64

./: .clang-format  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  keyToTheKingdom  makefile
assets/Env/Bongo Bongo/: bbroom.mtl
assets/Env/Hyrule Field/: hyrulefeild.mtl
assets/Env/Kokiri Forest/: Kokiri Forest.mtl
assets/FDL/: FDL.blend  FDL.blend1  FDL.md5anim  FDL.md5mesh  FDLSimpleWalk.blend  model.dae  model.mtl
assets/KingOfRedLions/: info.txt
assets/Navi/: Navi.mtl  Readme.txt
assets/Navi/Textures/: NOTE!.txt
assets/ToonLink/: info.txt
assets/control/: particle1.txt  particle2.txt
assets/world/: AkkkinControlPoints.csv  Whiterun.yaml  Windhelm.yaml  WorldSurfaceCPoints.csv  bezier-halo.csv  flagBanner.csv
cmake/: FindSOIL.cmake
ext/modelLoader/: CMakeLists.txt  Face.cpp  Face.h  Makefile  Material.cpp  Material.h  Matrix.cpp  Matrix.h  ModelLoader.hpp  Object.cpp  Object.h  Point.cpp  Point.h  PointBase.cpp  PointBase.h  README.txt  Vector.cpp  Vector.h
ext/objectLoader/: CMakeLists.txt  Makefile  Material.cpp  Material.h  Object.cpp  Object.h  Point.cpp  Point.h  PointBase.cpp  PointBase.h  Vector.cpp  Vector.h  main.cpp
glsl/: depth.f.glsl  md5shader.f.glsl  md5shader.v.glsl  normals.v.glsl  pass_through.f.glsl  pass_through.v.glsl  wallhax.f.glsl  wiggly.v.glsl
glsl/FFP-Texture/: frag.glsl  vert.glsl
glsl/Fountain/: vert.glsl
glsl/Ground/: frag.glsl  vert.glsl
glsl/average/: frag.glsl
glsl/dot-pos/: frag.glsl
glsl/inverted/: frag.glsl
glsl/lightness/: frag.glsl  vert.glsl
glsl/luminosity/: frag.glsl
include/: Cameras.hpp  Controller.hpp  Material.hpp  PacmanGame.hpp  PrettyGLUT.hpp  RenderPass.hpp  Shader.hpp  Shader_Utils.h  Utils.hpp  WorldObjects.hpp
include/Cameras/: ArcBallCamera.hpp  CameraBase.hpp  FirstPersonCamera.hpp  FreeCamera.hpp
include/MD5/: md5anim.h  md5mesh.h  md5model.h
include/Utils/: Color.hpp  DebugTools.hpp  GL_Defs.hpp  InternalVector.hpp  Logging.hpp  MathHelpers.hpp  Misc.hpp  PointVecBase.hpp
include/WorldObjects/: BezierCurve.hpp  CallListObject.hpp  DragonBorn.hpp  EnemyCrowd.hpp  Firnen.hpp  FirnensAkkkin.hpp  FirnensCart.hpp  FlagBanner.hpp  FountainSystem.hpp  Incallidus.hpp  IncallidusPet.hpp  Md5Object.hpp  Navi.hpp  ParticleSystem.hpp  Point.hpp  Track.hpp  WorldObjModel.hpp  WorldObjectBase.hpp  WorldSurface.hpp
include/WorldObjects/Lighting/: Light.hpp  PointLight.hpp  Spotlight.hpp
include/cameras/: ArcBallCamera.hpp
source/: Material.cpp  PacmanGame.cpp  PrettyGLUT.cpp  RenderPass.cpp  Shader.cpp  Shader_Utils.cpp  main.cpp  md5anim.cpp  md5mesh.cpp
source/Cameras/: ArcBallCamera.cpp  CameraBase.cpp  FreeCamera.cpp
source/Utils/: DebugTools.cpp  Misc.cpp
source/WorldObjects/: BezierCurve.cpp  CallListObject.cpp  DragonBorn.cpp  EnemyCrowd.cpp  Firnen.cpp  FirnensAkkkin.cpp  FirnensCart.cpp  FlagBanner.cpp  FountainSystem.cpp  Incallidus.cpp  Md5Object.cpp  Navi.cpp  Point.cpp  Track.cpp  WorldObjModel.cpp  WorldObjectBase.cpp  WorldSurface.cpp
source/WorldObjects/Lighting/: Light.cpp  PointLight.cpp  Spotlight.cpp
source/cameras/: ArcBallCamera.cpp
www/: Firnen.html  incallidus.html
www/Website/: Firnen.html
